--- a/renderer.qsf
+++ b/renderer.qsf
@@ -307,6 +307,7 @@ set_location_assignment PIN_E12 -to VGA_R[6]
 set_location_assignment PIN_F13 -to VGA_R[7]
 set_location_assignment PIN_C10 -to VGA_SYNC_N
 set_location_assignment PIN_D11 -to VGA_VS
+set_global_assignment -name VERILOG_FILE src/pose_tracker.v
 set_global_assignment -name VERILOG_FILE src/Hexadecimal_To_Seven_Segment.v
 set_global_assignment -name VERILOG_FILE src/renderer.v
 set_global_assignment -name VERILOG_FILE src/PS2_Controller.v
