--- a/renderer.qsf
+++ b/renderer.qsf
@@ -313,4 +313,5 @@ set_global_assignment -name VERILOG_FILE src/renderer.v
 set_global_assignment -name VERILOG_FILE src/PS2_Controller.v
 set_global_assignment -name VERILOG_FILE src/Altera_UP_PS2_Data_In.v
 set_global_assignment -name VERILOG_FILE src/Altera_UP_PS2_Command_Out.v
+set_global_assignment -name VERILOG_FILE src/Keyboard_Interfacer.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
